# acoustics-project

./: CHANGELOG.md.txt  README.md.txt  gui.py  model.py  requirements.txt.txt  sine.py  test-terminal.py  view.py
src/: setup.cfg
src/acoustics_applet/: controller.py  gui.py  model.py  view.py
