[metadata]
name = acoustics_project
version = 1.00
author = Riley Kuiper and Nathaniel Lethbridge
description = This project takes an audio file input (either mp3 or wav) and provides access to a slew of information, such as the waveform plot, RT60 differences, the length of the file, etc.
url = https://github.com/rkuiper2381/acoustics-project
license = MIT

[options]
packages = find:
install_requires =
    numpy==1.21.2
    matplotlib==3.4.3
    scipy==1.7.3
    pydub==0.25.1
python_requires = >=3.6

[options.packages.find]
exclude =
    tests
    docs